--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Quotes</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dynamic Quote Generator</title>
 </head>
 <body>
-    <h1>Random Quote Generator</h1>
+  <h1>Dynamic Quote Generator</h1>
 
-    <div id="quoteDisplay">
-        <p id="quoteText"></p>
-        <p id="quoteCategory"></p>
-    </div>
+  <div>
+    <p id="quoteText"></p>
+    <p id="quoteCategory"></p>
+  </div>
 
-    <button id="newQuoteBtn">Show New Quote</button>
+  <button id="newQuoteBtn">Show New Quote</button>
 
-    <h2>Add a New Quote</h2>
-    <input type="text" id="quoteInput" placeholder="Enter quote">
-    <input type="text" id="categoryInput" placeholder="Enter category">
+  <div>
+    <input id="quoteInput" type="text" placeholder="Enter a new quote" />
+    <input id="categoryInput" type="text" placeholder="Enter quote category" />
     <button id="addQuoteBtn">Add Quote</button>
+  </div>
 
-    <script src="newfile.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
