--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,18 +8,11 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <div>
-    <p id="quoteText"></p>
-    <p id="quoteCategory"></p>
-  </div>
+  <div id="quoteDisplay"></div>
 
-  <button id="newQuoteBtn">Show New Quote</button>
+  <button id="newQuote">Show New Quote</button>
 
-  <div>
-    <input id="quoteInput" type="text" placeholder="Enter a new quote" />
-    <input id="categoryInput" type="text" placeholder="Enter quote category" />
-    <button id="addQuoteBtn">Add Quote</button>
-  </div>
+  <div id="addQuoteFormContainer"></div>
 
   <script src="script.js"></script>
 </body>
