--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dynamic Quote Generator</title>
+    <meta charset="UTF-8">
+    <title>Dynamic Quote Generator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        #quoteDisplay {
+            margin: 20px 0;
+            font-size: 1.5em;
+            font-style: italic;
+        }
+        button {
+            margin: 5px;
+            padding: 10px 15px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
 
-  <div id="quoteDisplay"></div>
+    <h1>Dynamic Quote Generator</h1>
+    <div id="quoteDisplay">Click the button to see a quote!</div>
 
-  <button id="newQuote">Show New Quote</button>
+    <button id="newQuoteBtn">Show New Quote</button>
+    <br><br>
 
-  <div id="addQuoteFormContainer"></div>
+    <input type="text" id="newQuoteInput" placeholder="Add a new quote">
+    <button id="addQuoteBtn">Add Quote</button>
+    <br><br>
 
-  <script src="script.js"></script>
+    <button id="exportBtn">Export Quotes (JSON)</button>
+    <input type="file" id="importFile" accept=".json">
+    
+    <script src="script.js"></script>
 </body>
 </html>
