--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -2,26 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Quote Generator</title>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <div id="quoteDisplay"></div>
+  <!-- Display area for quotes -->
+  <div id="quoteDisplay">
+    <p id="quoteText"></p>
+    <p id="quoteCategory"></p>
+  </div>
 
+  <!-- Button to show a new random quote -->
   <button id="newQuoteBtn">Show New Quote</button>
 
-  <h3>Add a New Quote</h3>
-  <input type="text" id="quoteText" placeholder="Quote text">
-  <input type="text" id="quoteCategory" placeholder="Category">
-  <button id="addQuoteBtn">Add Quote</button>
+  <!-- Form to add a new quote -->
+  <div>
+    <input id="quoteInput" type="text" placeholder="Enter a new quote" />
+    <input id="categoryInput" type="text" placeholder="Enter quote category" />
+    <button id="addQuoteBtn">Add Quote</button>
+  </div>
 
-  <h3>Filter by Category</h3>
-  <select id="categorySelect"></select>
+  <!-- Filter quotes by category -->
+  <div>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
+  </div>
 
-  <h3>Import/Export Quotes</h3>
-  <input type="file" id="importFile" accept=".json">
-  <button id="exportBtn">Export Quotes</button>
+  <!-- Import/Export JSON -->
+  <div>
+    <button id="exportBtn">Export Quotes to JSON</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  </div>
 
   <script src="script.js"></script>
 </body>
